Compiler Bouw/compiler/test/basic/stephen/fail/types_negate.cvc
#include "civic.h"

export int main() {
    int a = !0;
    return 0;
}
